{
    "name": "TouchControlMap",
    "maps": [
        {
            "name": "TouchActionMap",
            "id": "d1669231-1195-41d8-b874-207abe226d37",
            "actions": [
                {
                    "name": "Touch",
                    "type": "PassThrough",
                    "id": "09509a72-138b-4e20-ad94-91b7a9ab7545",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slide",
                    "type": "Value",
                    "id": "304b7929-9c60-4393-84a7-39a75e5c703a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "14cd3ef2-854d-4b66-a7a6-6334304088ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "963a2517-110c-4f65-af76-476cedab760f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc45a627-39a1-401a-a400-126dec27a23a",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b31595c-3067-4579-a2a1-a3ab50ed1455",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}